--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,4 +67,48 @@ footer a {
     color: #024e76;
 }
 
+section {
+    padding: 60px;
+}
 
+/* Hero Style Start */
+.hero {
+    background-image: url(../images/hero-bg.jpeg);
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+/* Hero Syle End */
+
+/* Hero Form Style Start */
+.hero-form {
+    border: 3px solid #024e76;
+    background-color: #fce138;
+    padding: 20px;
+    width: 500px;
+    color: #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
+  }
+/* Hero Form Style End */
+
+.hero-form h3 {
+    font-size: 24px;
+    margin: 0px;
+}
+
+.hero-form p {
+    margin: 5px 0 15px 0;
+}
+
+.form-input {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+}
