--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,9 +79,7 @@ section {
     background-position: center;
     position: relative;
 }
-/* Hero Syle End */
 
-/* Hero Form Style Start */
 .hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
@@ -92,7 +90,6 @@ section {
     bottom: 120px;
     right: 140px;
   }
-/* Hero Form Style End */
 
 .hero-form h3 {
     font-size: 24px;
@@ -112,3 +109,16 @@ section {
     width: 100%;
     margin-bottom: 15px;
 }
+
+.hero-form label {
+    margin: 0 5px;
+}
+
+.hero-form button {
+    color: #fce138;
+    background-color: #024e76;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+/* Hero Syles End */
