--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     /* apply styles to body */
     color: #39a6b2;
-    font-family: Helvetica, Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 /* apply styles to <header> */
@@ -80,6 +80,8 @@ section {
     position: relative;
 }
 
+/* Hero Syles End */
+
 .hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
@@ -93,7 +95,7 @@ section {
 
 .hero-form h3 {
     font-size: 24px;
-    margin: 0px;
+    margin: 0;
 }
 
 .hero-form p {
@@ -121,7 +123,6 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
-/* Hero Syles End */
 
 .intro {
     text-align: center;
@@ -179,4 +180,51 @@ section {
 
 .secondary-border {
     border-color: #39a6b2;
+}
+
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
 }
