--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,14 +14,14 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
 }
 
 header h1 {
     font-weight: bold;
+    margin: 0;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
-    display: inline;
 }
 
 header a {
@@ -30,7 +30,6 @@ header a {
 }
 
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
