--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ header {
     padding: 20px 35px;
     background-color: #39a6b2;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 header h1 {
