--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
-/* apply styles to <header> */
+/* HEADER / NAV BAR STYLES START */
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -48,7 +48,10 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 1.55vw;
 }
+/* HEADER / NAVBAR STYLES END */
 
+
+/* FOOTER STYLES START */
 footer {
     background: #fce138;
     width: 100%;
@@ -72,10 +75,13 @@ footer div {
 footer a {
     color: #024e76;
 }
+/* END FOOTER STYLES */
 
+/* STYLE ALL SECTION TAGS */
 section {
     padding: 60px;
 }
+
 
 /* Hero Style Start */
 .hero {
@@ -142,9 +148,29 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
-
 /* Hero Style Ends */
 
+/* SECTION TITLE STYLES START */
+.section-title {
+    font-size: 48px;
+    color: #024e76;
+    border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+/* SECTION TITLE STYLES END */
+
+/* WHAT WE DO STYLES */
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -153,7 +179,9 @@ section {
     margin: 0 auto;
     text-align: center;
 }
+/*WHAT YOU DO STYLES END */
 
+/* WHAT YOU DO STYLES START */
 .steps {
     background: #fce138;
 }
@@ -207,62 +235,50 @@ section {
     max-width: 100%;
 }
 
-.section-title {
-    font-size: 48px;
-    color: #024e76;
-    border-bottom: 3px solid;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
-}
 
-.primary-border {
-    border-color: #fce138;
-}
+/* WHAT YOU DO STYLES END */
 
-.secondary-border {
-    border-color: #39a6b2;
-}
-
+/* MEET THE TRAINERS START */
 .trainers {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .trainer {
-    margin: 20px;
-    background: #024e76;
-    color: #fce138;
-    flex: 1;
+  margin: 20px;
+  flex: 1;
+  background: #024e76;
+  color: #fce138;
 }
 
 .trainer img {
-    width: 100%;
+  width: 100%;
 }
 
 .trainer-bio {
-    padding: 25px;
-    line-height: 1.3;
+  padding: 25px;
+  line-height: 1.3;
 }
 
 .trainer-bio h3 {
-    font-size: 28px;
+  font-size: 28px;
 }
 
 .trainer-bio h4 {
-    font-weight: lighter;
-    font-size: 22px;
-    margin-bottom: 15px;
+  font-weight: lighter;
+  font-size: 22px;
+  margin-bottom: 15px;
 }
 
 .trainer-bio p {
-    font-size: 17;
+  font-size: 17px;
 }
+/* TRAINER STYLES END */
 
+/* REACH OUT STYLES START */
 .contact {
     background-color: #024e76;
 
@@ -327,7 +343,9 @@ section {
 .contact-info a {
     color: #fce138;
 }
+/* REACH OUT STYLES END */
 
+/* UTILITIES */
 .text-left {
     text-align: left;
 }
@@ -339,6 +357,7 @@ section {
 .flex-row {
     display: flex;
 }
+/* END UTILITIES */
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width:980px) {
